<resources>
    <string name="app_name">Geo Guru</string>
    <string name="geo_guru">Geo Guru</string>

    <string name="bhutan_img">Bhutan Image</string>
    <string name="laos_img">Laos Image</string>
    <string name="latvia_img">Latvia Image</string>

    <string name="action_how_to_play">How To Play</string>
    <string name="instructions">You will be given a country with a list of cities to choose from.
    Select the capital of that country from the list to get the point. You will receive 10 questions.
    Good luck! </string>

    <string name="q1">What is the capital of Bhutan?</string>
    <string name="q2">What is the capital of Laos?</string>
    <string name="q3">What is the capital of Latvia?</string>

    <string name="q1a1">Thimphu</string>
    <string name="q1a2">Sofia</string>
    <string name="q1a3">Lima</string>

    <string name="q2a1">Budapest</string>
    <string name="q2a2">Vientiane</string>
    <string name="q2a3">Adis Ababba</string>

    <string name="q3a1">Caracas</string>
    <string name="q3a2">Prague</string>
    <string name="q3a3">Riga</string>

    <string name="won">Congratulations! You won!</string>
    <string name="lost">Sucks to suck</string>

    <string name="end_description">Congratulations! You made it to the end!</string>

</resources>
