<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q2Activity">

    <TextView
        android:id="@+id/q2_question"
        android:layout_width="336dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="219dp"
        android:text="@string/q2" />

    <ImageView
        android:id="@+id/q2_image"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/laos_img"
        android:src="@drawable/laos_project"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/q2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="toQ3Activity"
        android:text="To Question 3"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="412dp" />

    <RadioGroup
        android:id="@+id/set2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="111dp">

        <RadioButton
            android:id="@+id/budapest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/q2a1" />

        <RadioButton
            android:id="@+id/vientiane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/q2a2" />

        <RadioButton
            android:id="@+id/adis_ababba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/q2a3" />
    </RadioGroup>

</RelativeLayout>