<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q2Activity">

    <TextView
        android:id="@+id/q3_question"
        android:layout_width="336dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="219dp"
        android:text="@string/q3" />

    <!--<CheckBox-->
        <!--android:layout_width="220dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="145dp"-->
        <!--android:text="@string/q3a2" />-->

    <!--<CheckBox-->
        <!--android:layout_width="220dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="105dp"-->
        <!--android:text="@string/q3a3" />-->

    <ImageView
        android:id="@+id/q3_image"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/latvia_img"
        android:src="@drawable/latvia_project"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/q3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="toEnd"
        android:text="To End"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="412dp" />

    <RadioGroup
        android:id="@+id/set3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="111dp">

        <RadioButton
            android:id="@+id/caracas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a1" />

        <RadioButton
            android:id="@+id/prague"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a2" />

        <RadioButton
            android:id="@+id/riga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a3" />
    </RadioGroup>

</RelativeLayout>